Style scrollbar and fix artifact type buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -390,6 +390,21 @@ td.unpin {
 .tab-pane {
   margin-top: 25px; }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px; }
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50px; }
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.25); }
+
+::-webkit-scrollbar-corner {
+  background-color: rgba(0, 0, 0, 0.1); }
+
 /* Settings */
 .settings-toggle {
   margin-bottom: 5px; }
@@ -431,7 +446,8 @@ td.unpin {
   margin-bottom: 25px; }
 
 .publish .artifact-type .btn {
-  margin-right: 0px; }
+  margin-right: 0px;
+  padding: 6px 10px; }
 
 .publish .cover-art {
   width: 100%;
